# sdlroads

./: AUTHORS  Makefile.am  ProjectHome.md  TODO
fonts/: Makefile.in
images/: Makefile.am
models/: rapier.mtl
sdlroads/: INSTALL-OSX  README  aclocal.m4  mkinstalldirs
sdlroads/fonts/: Makefile.am
sdlroads/src/: args.c  camera.c  camera.h  consts.h  defs.h  images.c  images.h  input.c  main.c  mathlib.c  mathlib.h  menu.c  menu.h  model.c  model.h  render.c  scene.c  scene.h  sdlroads.h  settings.c  settings.h  ship.c  sound.c  sound.h  text.c  text.h  track.c  track.h  util.c  win32config.h
sdlroads/tracks/: Makefile.in  easy_track  track8  tracks.list
sdlroads/tracks/skyroads/: road1-1  road1-2  road1-3  road2-1  road2-2  road2-3  road3-1  road3-2  road3-3  road4-1  road4-2  road4-3  road5-1  road5-2  road5-3  road6-1  road6-2  road6-3  road7-1  road7-2  road7-3  road8-1  road8-2  road8-3  road9-1  road9-2  road9-3  roada-1  roada-2  roada-3
sound/: Makefile.am
src/: Makefile.in  defs.h  main.c  mathlib.h  scene.c  window.c  window.h
tags/original-sf-tarball/: Makefile.in  NEWS  configure  configure.ac
tags/original-sf-tarball/models/: Makefile.am
tags/original-sf-tarball/src/: Makefile.am  consts.h  input.h  mathlib.c  menu.c  ship.h  text.c  util.c  util.h
tags/original-sf-tarball/tracks/: Makefile.am  bigtrack  track2  track4
tags/original-sf-tarball/tracks/skyroads/: road2-3  road8-1  road8-3
tracks/: track1  track3  track5  track6  track7
tracks/skyroads/: Makefile.am  road1-2  road2-1  road2-2  road3-1  road3-2  road3-3  road4-1  road4-2  road4-3  road5-2  road5-3  road6-2  road6-3  road7-2  road7-3  road8-2  road9-2  road9-3  roada-2  roada-3  tracks.list
trunk/sdlroads/: AUTHORS  ChangeLog  NEWS  README
trunk/sdlroads/images/: Makefile.am  Makefile.in
trunk/sdlroads/models/: Makefile.in
trunk/sdlroads/sound/: Makefile.in
trunk/sdlroads/src/: Makefile.am  args.c  args.h  camera.c  config.h.in  core.h  defs.h  images.c  input.c  main.c  mathlib.c  model.c  render.c  render.h  scene.c  sdlroads.h  settings.c  ship.c  sound.c  util.c  window.c
trunk/sdlroads/tracks/: testtrack  track8
trunk/sdlroads/tracks/skyroads/: Makefile.in  road1-1  road1-3  road5-1  road6-1  road7-1  road9-1
