dist_pkgdata_DATA =\
road1-1\
road1-2\
road1-3\
road2-1\
road2-2\
road2-3\
road3-1\
road3-2\
road3-3\
road4-1\
road4-2\
road4-3\
road5-1\
road5-2\
road5-3\
road6-1\
road6-2\
road6-3\
road7-1\
road7-2\
road7-3\
road8-1\
road8-2\
road8-3\
road9-1\
road9-2\
road9-3\
roada-1\
roada-2\
roada-3\
tracks.list

pkgdatadir = @datadir@/@PACKAGE@/tracks/skyroads
