bin_PROGRAMS = sdlroads

sdlroads_SOURCES = \
input.c input.h\
main.c core.h defs.h consts.h\
render.c render.h\
window.c window.h\
mathlib.c mathlib.h\
camera.c camera.h\
scene.c scene.h\
images.c images.h\
menu.c menu.h\
ship.c ship.h\
track.c track.h\
args.c args.h\
util.c util.h\
settings.c settings.h\
model.c model.h\
sound.c sound.h\
text.c text.h
